--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,17 @@
----
-layout: "wrapper"
----
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- Header -->
+  <link rel="stylesheet" href="../assets/css/bootstrap.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/fonts.css">
+  <link rel="stylesheet" href="../assets/css/screen-sizes.css">
+
+</head>
+<body>
+    <!-- Header -->
 <div class="container-fluid" style="background-color: white; height: 100vh; padding-left: 5vw; padding-right:5vw">
     <div class="row justify-content-center">
         <div class="col" style="padding-top:4em">
@@ -16,3 +25,6 @@ layout: "wrapper"
         </div>
     </div>
 </div>
+
+</body>
+</html>
